修复esui.CheckBox中data-ui-checked的问题

--- a/src/client/src/user/settings.tpl.html
+++ b/src/client/src/user/settings.tpl.html
@@ -106,8 +106,7 @@
                                 <input type="checkbox"
                                        data-ui-id="pop3-tls"
                                        data-ui-type="CheckBox"
-                                       name="pop3.tls"
-                                       data-ui-checked="${formData.pop3.tls}" />
+                                       name="pop3.tls" />
                             </div>
                         </div>
                     </div>
@@ -154,8 +153,7 @@
                                 <input type="checkbox"
                                        data-ui-id="smtp-tls"
                                        data-ui-type="CheckBox"
-                                       name="smtp.tls"
-                                       data-ui-checked="${formData.smtp.tls}" />
+                                       name="smtp.tls" />
                             </div>
                         </div>
                     </div>
