尝试添加pop3.recent_mails的配置

--- a/src/client/src/user/settings.tpl.html
+++ b/src/client/src/user/settings.tpl.html
@@ -101,6 +101,17 @@
                         </div>
 
                         <div class="form-row">
+                            <div class="form-key">只收最近几天的：</div>
+                            <div class="form-value">
+                                <input data-ui-id="pop3-recent_mails"
+                                       data-ui-type="TextBox"
+                                       data-ui-hint="单位：天"
+                                       name="pop3.recent_mails"
+                                       data-ui-value="${formData.pop3.recent_mails}" />
+                            </div>
+                        </div>
+
+                        <div class="form-row">
                             <div class="form-key">SSL加密：</div>
                             <div class="form-value">
                                 <input type="checkbox"
