调整docx和xlsx的预览页面的效果

--- a/src/client/preview.html
+++ b/src/client/preview.html
@@ -5,7 +5,7 @@
     <title>Microsoft Office Documents Preview</title>
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="src/third_party/font-awesome/4.2.0/css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="src/third_party/Entry.css/entry.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="src/third_party/Entry.css/entry.css" /> -->
     <link rel="stylesheet" type="text/css" href="src/common/css/preview.less" />
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js"></script>
     <script>
